# dbus-signal-virtual-panel

./: .gitignore  CMakeLists.txt  KbdEvAdaptor.cpp  KbdEvAdaptor.h  KbdEvInterface.cpp  KbdEvInterface.h  KeyReader.qml  KnobKey.qml  PanelButton.qml  README.md  backend.cpp  backend.h  event_filter.cpp  event_filter.h  kbd_event.xml  kbdev.cpp  kbdev.h  main.cpp  main.qml  master_b.cpp  master_b.h  master_pw.cpp  master_pw.h  mouse_ctrl_event_filter.cpp  mouse_ctrl_event_filter.h  mouse_manager.cpp  mouse_manager.h  mouse_manager_module.h  mouse_mgr_interface.h  qml.qrc  roi_shape.cpp  roi_shape.h
